--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">PERFIL</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">EXPERIENCIA</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">EDUCACION</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">HABILIDADES</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">INTERESES</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">CERTIFICADOS</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#PERFIL">PERFIL</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#EXPERIENCIA">EXPERIENCIA</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#EDUCACION">EDUCACION</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#HABILIDADES">HABILIDADES</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#INTERESES">INTERESES</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#CERTIFICADOS">CERTIFICADOS</a></li>
                 </ul>
             </div>
         </nav>
