--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
                     </div>
                     <p class="lead mb-5">Me considero una persona alegre, dinámica, divertida, con facilidad de adaptación y capacidad de trabajar en equipo para lograr las metas que se me van a trazar.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#!"><i class="https://www.linkedin.com/feed/"></i></a>
-                        <a class="social-icon" href="#!"><i class="https://github.com/Naneli20"></i></a>
-                        <a class="social-icon" href="#!"><i class="https://twitter.com/MioBardales"></i></a>
-                        <a class="social-icon" href="#!"><i class="https://www.facebook.com/nancyelizabethmioba/f"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/feed/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/Naneli20"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://twitter.com/MioBardales"><i class="fab fa-twitter"></i></a>
+                        <a class="social-icon" href="https://www.facebook.com/nancyelizabethmioba/f"><i class="fab fa-facebook-f"></i></a>
                     </div>
                 </div>
             </section>
