--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                             <div class="subheading mb-3">Atención al cliente</div>
                             <p>Organizar y dirigir la formación complementaria del egresado de educación secundaria a través de los estudios Pre universitarios.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2017 - 2018</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary"></span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -100,7 +100,7 @@
                             <div>Computer Science - Web Development Track</div>
                             <p>2° a 5° año</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2016</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
